--- a/package.json
+++ b/package.json
@@ -9,21 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.7",
     "embla-carousel-react": "^8.2.1",
-    "next": "14.2.9",
+    "next": "^14.2.10",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.9",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint-config-next": "14.2.9"
   }
 }
